@@ -7,15 +7,15 @@
 	.word	0xdeadbeef
 
 # some real code, compiled from a toy C program
-	        .globl  main
+        .globl  main
         .ent    main
 main:
-        .frame  $fp,32,$31              # vars= 16, regs= 2/0, args= 0, extra= 0
+        .frame  $fp,24,$31              # vars= 16, regs= 2/0, args= 0, extra= 0
         .mask   0xc0000000,-8
         .fmask  0x00000000,0
-        subu    $sp,$sp,32
-        sd      $31,24($sp)
-        sd      $fp,16($sp)
+        subu    $sp,$sp,24
+        sw      $31,20($sp)
+        sw      $fp,16($sp)
         move    $fp,$sp
         jal     __main
         li      $2,2                    # 0x2
@@ -32,20 +32,20 @@ main:
         b       $L1
 $L1:
         move    $sp,$fp
-        ld      $31,24($sp)
-        ld      $fp,16($sp)
-        addu    $sp,$sp,32
+        lw      $31,20($sp)
+        lw      $fp,16($sp)
+        addu    $sp,$sp,24
         j       $31
         .end    main
         .align  2
         .globl  g
         .ent    g
 g:
-        .frame  $fp,32,$31              # vars= 16, regs= 1/0, args= 0, extra= 0
+        .frame  $fp,24,$31              # vars= 16, regs= 1/0, args= 0, extra= 0
         .mask   0x40000000,-16
         .fmask  0x00000000,0
-        subu    $sp,$sp,32
-        sd      $fp,16($sp)
+        subu    $sp,$sp,24
+        sw      $fp,16($sp)
         move    $fp,$sp
         sw      $4,0($fp)
         lw      $2,0($fp)
@@ -54,7 +54,7 @@ g:
         b       $L2
 $L2:
         move    $sp,$fp
-        ld      $fp,16($sp)
-        addu    $sp,$sp,32
+        lw      $fp,16($sp)
+        addu    $sp,$sp,24
         j       $31
         .end    g
